--- a/src/main/resources/templates/indexfrag.html
+++ b/src/main/resources/templates/indexfrag.html
@@ -20,26 +20,24 @@ body {font-family: Arial, Helvetica, sans-serif;}
   
 }
 
-.flex-container > div {
+.zoom {
+  padding: 10px;
   background-color: #f1f1f1;
-  width: 160px;
-  margin: 10px;
   text-align: center;
+  transition: transform .2s;
+  width: 160px;
+  height: 200px;
+  margin: 10px;
   line-height: 55px;
   font-size: 30px;
   border-radius : 8px;
   box-shadow: 6px;
 }
 
-.flex-container > div:hover {
-  background-color: #f1f1f1;
-  width: 176px;
-  margin: 10px;
-  text-align: center;
-  line-height: 61px;
-  font-size: 30px;
-  border-radius : 8px;
-  
+.zoom:hover {
+  -ms-transform: scale(1.2); /* IE 9 */
+  -webkit-transform: scale(1.2); /* Safari 3-8 */
+  transform: scale(1.2); 
 }
 
 
