removed DaybookBalance class and it's references

--- a/src/main/resources/templates/findLedger.html
+++ b/src/main/resources/templates/findLedger.html
@@ -9,6 +9,7 @@
 			<div class="row">
 				<div class="col-xs-7 col-sm-6 col-lg-8">
 					<div>
+					<form>
 						<fieldset>
 							<legend>Select Account</legend>
 							<div class="scrol">
@@ -28,6 +29,7 @@
 								</table>
 							</div>
 						</fieldset>
+					</form>
 					</div>
 				</div>
 				<div class="col-xs-5 col-sm-6 col-lg-4">
