--- a/src/main/resources/templates/findDaybook.html
+++ b/src/main/resources/templates/findDaybook.html
@@ -12,7 +12,7 @@
 			<legend>Select Date Range</legend>
 			From Date: <input type="date" th:filed="*{startDate}" name="startDate" min="2000-01-01" max="2022-01-01" value="2020-04-02" >
 		 	<br><br>To Date: <input type="date" th:filed="*{endDate}" name="endDate" min="2000-01-02" max="2022-01-01" value ="2020-04-08">
-			<br><br><span><button type="submit">Submit </button>
+			<br><br><span><button type="submit">Submit </button></span>
 			<input type="button" value="Close">
 		</fieldset>
 		</form>	
