--- a/src/main/resources/templates/findLedger.html
+++ b/src/main/resources/templates/findLedger.html
@@ -9,34 +9,43 @@
 			<div class="row">
 				<div class="col-xs-7 col-sm-6 col-lg-8">
 					<div>
-					<form>
-						<fieldset>
-							<legend>Select Account</legend>
-							<div class="scrol">
-								<table class="table table-striped table-bordered">
-									<thead class="thead-dark">
-										<tr>
-											<th>Acc Code</th>
-											<th>Account Name</th>
-										</tr>
-									</thead>
-									<tbody>
-										<tr th:each="accHead : ${accHeadList}">
+						<form>
+							<fieldset>
+								<legend style="width: auto;">Select Account</legend>
+								<div class="scrol">
+									<table class="table table-striped table-bordered">
+										<thead class="thead-dark">
+											<tr>
+												<th>Acc Code &nbsp;&nbsp;&nbsp; Account Name</th>
+											</tr>
+										</thead>
+										<tbody>
+											<!--		<tr th:each="accHead : ${accHeadList}">
 											<td th:text="${accHead.accCode}">Acc Code</td>
 											<td th:text="${accHead.accName}">Account Name</td>
-										</tr>
-									</tbody>
-								</table>
-							</div>
-						</fieldset>
-					</form>
+										</tr> -->
+											<tr th:each="accHead : ${accHeadList}">
+												<td><input type="checkbox"
+													th:attr="id=${accHead.accHeadId}, name=${accHead.accHeadId}"
+													value="th:text=&quot${accHead.accName}&quot"> 
+													<label style="padding:12px; width:420px; height:15px; text-align:middle"
+													th:attr="for=${accHead.accHeadId}"
+													th:text="${accHead.accCode}+'&nbsp;&nbsp;&nbsp;'+${accHead.accName}">
+												</label></td>
+											</tr>
+										</tbody>
+
+									</table>
+								</div>
+							</fieldset>
+						</form>
 					</div>
 				</div>
 				<div class="col-xs-5 col-sm-6 col-lg-4">
-					<form th:action="@{/ledger}" th:object="${formdata}" method="post"
-						style="max-width: 600px; margin: 0 auto;">
-						<fieldset>
-							<legend>Select Specifications</legend>
+					<fieldset>
+						<legend style="width: auto;">Select Specifications</legend>
+						<form th:action="@{/ledger}" th:object="${formdata}" method="post"
+							style="max-width: 600px; margin: 0 auto;">
 							<div class="form-group">
 								<label for="exampleFormControlSelect1">Report Order</label> <select
 									class="form-control" th:field="*{reportOrder}"
@@ -68,8 +77,8 @@
 							</div>
 							<button type="submit">Submit</button>
 							<input type="button" value="Close">
-						</fieldset>
-					</form>
+						</form>
+					</fieldset>
 				</div>
 			</div>
 		</div>
