--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -13,9 +13,10 @@
 <link rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
+
 body {
 	font-family: Arial, Helvetica, sans-serif;
-	background-color: #f1f4f8
+	background-color: #f1f4f8;
 }
 
 #left_align {
@@ -62,7 +63,7 @@ body {
 }
 
 .active {
-	background-color: #4CAF50;
+	background-color: #b92b27;
 }
 
 @media screen and (max-width: 500px) {
