--- a/src/main/resources/templates/indexfrag.html
+++ b/src/main/resources/templates/indexfrag.html
@@ -8,67 +8,6 @@
 	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-
-
-body {font-family: Arial, Helvetica, sans-serif;}
-
-.flex-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  
-}
-
-.zoom {
-  padding: 10px;
-  background-color: #f1f1f1;
-  text-align: center;
-  transition: transform .2s;
-  width: 160px;
-  height: 200px;
-  margin: 10px;
-  line-height: 55px;
-  font-size: 30px;
-  border-radius : 8px;
-  box-shadow: 6px;
-}
-
-.zoom:hover {
-  -ms-transform: scale(1.2); /* IE 9 */
-  -webkit-transform: scale(1.2); /* Safari 3-8 */
-  transform: scale(1.2); 
-}
-
-
-.navbar {
-  width: 100%;
-  background-color: #555;
-  overflow: auto;
-}
-
-.navbar a {
-  float: left;
-  padding: 12px;
-  color: white;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.navbar a:hover {
-  background-color: #000;
-}
-
-.active {
-  background-color: #4CAF50;
-}
-
-@media screen and (max-width: 500px) {
-  .navbar a {
-    float: none;
-    display: block;
-  }
-}
-</style>
+	 <link rel="stylesheet" th:href="@{/css/index.css}" />
 </head>
 </html>
