--- a/src/main/resources/templates/indexfrag.html
+++ b/src/main/resources/templates/indexfrag.html
@@ -9,5 +9,6 @@
 	 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	 <link rel="stylesheet" th:href="@{/css/index.css}" />
+	 <link rel="stylesheet" th:href="@{/css/main.css}" />
 </head>
 </html>
