--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
-<head th:replace = "indexfrag :: headfra" />
+<head th:replace = "fragments :: head" />
 <body>
-  	<div th:replace = "fragments::navbar"> </div>  
+  	<div th:replace = "fragments::index-navbar"> </div>  
 	<div class="container text-center">
 	<h1>Welcome to CrDr</h1>
 	</div>
