--- a/src/main/resources/templates/findTrialBal.html
+++ b/src/main/resources/templates/findTrialBal.html
@@ -9,32 +9,39 @@
 			<div class="row">
 				<div class="col-xs-7 col-sm-6 col-lg-8">
 					<div>
-						<fieldset>
-							<legend>Select Account</legend>
-							<div class="scrol">
-								<table class="table table-striped table-bordered">
-									<thead class="thead-dark">
-										<tr>
-											<th>Acc Code</th>
-											<th>Account Name</th>
-										</tr>
-									</thead>
-									<tbody>
-										<tr th:each="accHead : ${accHeadList}">
-											<td th:text="${accHead.accCode}">Acc Code</td>
-											<td th:text="${accHead.accName}">Account Name</td>
-										</tr>
-									</tbody>
-								</table>
-							</div>
-						</fieldset>
+						<form>
+							<fieldset>
+								<legend style="width: auto;">Select Account</legend>
+									<div class="table-scroll">
+								  	<table id="account_selection">
+											<thead>
+											<tr>
+												<th>Acc Code</th>
+												<th>Account Name</th>
+											</tr>
+											</thead>
+											<tbody>
+											<tr th:each="accHead : ${accHeadList}">
+												<td><input type="checkbox"
+													th:attr="id=${accHead.accHeadId}, name=${accHead.accHeadId}"
+													value="th:text='${accHead.accName}'"> 
+													<label 	th:attr="for=${accHead.accHeadId}"
+													th:text="${accHead.accCode}">
+												</label></td>
+												<td th:text="${accHead.accName}"> </td>
+											</tr> 
+											</tbody>
+									</table> 
+								</div>
+							</fieldset>
+						</form>
 					</div>
 				</div>
 				<div class="col-xs-5 col-sm-6 col-lg-4">
-					<form th:action="@{/ledger}" th:object="${formdata}" method="post"
-						style="max-width: 600px; margin: 0 auto;">
-						<fieldset>
-							<legend>Select Specifications</legend>
+					<fieldset>
+						<legend style="width: auto;">Select Specifications</legend>
+						<form th:action="@{/ledger}" th:object="${trialform}" method="post"
+							style="max-width: 600px; margin: 0 auto;">
 							<div class="form-group">
 								<label for="exampleFormControlSelect1">Report Order</label> <select
 									class="form-control" th:field="*{reportOrder}"
@@ -43,12 +50,12 @@
 									<option value="true">Group</option>
 								</select>
 							</div>
-							Trial Balance as on : <input type="date" th:filed="*{date}"
-								name="date" min="2000-01-01" max="2022-01-01"
-								value="2020-04-30"> <br>
+							Trial Balance as on : <input
+								type="date" th:filed="*{endDate}" name="endDate"
+								min="2000-01-02" max="2022-01-01" value="2021-03-31">
 							<div class="form-group">
-								<label for="exampleFormControlSelect2">Accounts
-									with Zero Balance</label> <select class="form-control"
+								<label for="exampleFormControlSelect2">Accounts with
+									zero Balance</label> <select class="form-control"
 									th:field="*{zeroBal}" id="exampleFormControlSelect2">
 									<option value="false">No</option>
 									<option value="true" selected>Yes</option>
@@ -63,13 +70,23 @@
 									<option value="3">3</option>
 									<option value="4">4</option>
 									<option value="5">5</option>
-									<option value="6" selected>6</option>
+									<option value="6">6</option>
 								</select>
 							</div>
-							<button type="submit">Show</button>
+							<!--  Nice Listing format for Acc Selection -->
+							<table>
+								<th:block th:each="accHead : ${accHeadList}">
+									<tr>
+										<td><label th:text="${accHead.accName}">zamow</label> <input
+											type="checkbox" th:field="*{accCode}"
+											th:value="${accHead.accCode}" /></td>
+									</tr>
+								</th:block>
+							</table>
+							<button type="submit">Submit</button>
 							<input type="button" value="Close">
-						</fieldset>
-					</form>
+						</form>
+					</fieldset>
 				</div>
 			</div>
 		</div>
