--- a/src/main/resources/templates/trialBal.html
+++ b/src/main/resources/templates/trialBal.html
@@ -22,19 +22,17 @@
         <table class="table table-striped table-bordered">
             <thead class="thead-dark">
                 <tr>
-                    <th>Account Name</th>
-                    <th>Debit</th>
-                    <th>Credit</th>
+                    <th id="center_align">Account Name</th>
+                    <th id="center_align">Debit</th>
+                    <th id="center_align">Credit</th>
                 </tr>
             </thead>
             <tbody>
-               	<th:block th:each="list: ${listmap}">
-               		<tr th:with="daybal=${LedgerBalance.findBalance(list.value)}">
-               		 <td th:text ="${list.key}">Acc Head Name</td>
-               		 <td style="color:darkgreen" th:text="${daybal.closeBl}">Debit</td>
-               		 <td>Credit</td>
+               		<tr th:each="trialview: ${listTrailView}">
+               		 <td id="left_align" th:text ="${trialview.accName}">Acc Head Name</td>
+               		 <td id="right_align" style="color:darkgreen" th:text="${trialview.debit}">Debit</td>
+               		 <td id="right_align" style="color:darkgreen" th:text="${trialview.credit}">Credit</td>
                		</tr>
-                </th:block>
             </tbody>
         </table>
         </div>
