--- a/src/main/resources/templates/findTrialBal.html
+++ b/src/main/resources/templates/findTrialBal.html
@@ -40,7 +40,7 @@
 				<div class="col-xs-5 col-sm-6 col-lg-4">
 					<fieldset>
 						<legend style="width: auto;">Select Specifications</legend>
-						<form th:action="@{/ledger}" th:object="${trialform}" method="post"
+						<form th:action="@{/trial}" th:object="${trialform}" method="post"
 							style="max-width: 600px; margin: 0 auto;">
 							<div class="form-group">
 								<label for="exampleFormControlSelect1">Report Order</label> <select
