--- a/src/main/resources/templates/BalanceSheet.html
+++ b/src/main/resources/templates/BalanceSheet.html
@@ -14,7 +14,7 @@
         </form>
     </div>
     <div>
-        <h1>Trial Balance</h1>
+        <h1>Balance Sheet</h1>
     </div>
      
     <div>
@@ -22,16 +22,16 @@
         <table class="table table-striped table-bordered">
             <thead class="thead-dark">
                 <tr>
-                    <th id="center_align">Account Name</th>
+                    <th id="center_align">Particulars</th>
                     <th id="center_align">Debit</th>
                     <th id="center_align">Credit</th>
                 </tr>
             </thead>
             <tbody>
-               		<tr th:each="trialview: ${listTrailView}">
-               		 <td id="left_align" th:text ="${trialview.accName}">Acc Head Name</td>
-               		 <td id="right_align" style="color:darkgreen" th:text="${trialview.debit}">Debit</td>
-               		 <td id="right_align" style="color:darkgreen" th:text="${trialview.credit}">Credit</td>
+               		<tr th:each="balSheet: ${listBalSheet}">
+               		 <td id="left_align" th:text ="${balSheet.particulars}">Acc Head Name</td>
+               		 <td id="right_align" style="color:darkgreen" th:text="${balSheet.debit}">Debit</td>
+               		 <td id="right_align" style="color:darkgreen" th:text="${balSheet.credit}">Credit</td>
                		</tr>
             </tbody>
         </table>
