--- a/src/main/resources/templates/ledger.html
+++ b/src/main/resources/templates/ledger.html
@@ -24,8 +24,8 @@
                 <tr>
                     <th>Date</th>
                     <th>Narration</th>
-                    <th>Credit</th>
                     <th>Debit</th>
+                    <th>Credit</th>
                     <th>Balance</th>
                     <th>D/C</th>
                 </tr>
@@ -43,8 +43,8 @@
                		<tr>
                		 <td th:text = "${ledger.date}">Date</td>
                		 <td style="color:red">Opening Balance</td>
-               		 <td></td>
-               		 <td style="color:darkgreen" th:text="${ledger.openingBal}">Opening Balance Value</td>
+               		 <td style="color:darkgreen" th:text = "${ledger.openingBal}">Opening Balance Value</td>
+               		 <td style="color:darkgreen" th:text= "${ledger.dOrC}">Opening Balance Value</td>
                		 <td></td>
                		 <td></td>
                		</tr>
