--- a/src/main/resources/templates/daybooks.html
+++ b/src/main/resources/templates/daybooks.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
-<head th:replace="fragments :: head">
-</head>
+<head th:replace="fragments :: head"></head>
 <body>
 	<div th:replace="fragments :: navbar"></div>
 	<div class="container text-center">
@@ -19,14 +18,17 @@
 		</div>
 
 		<div>
-			<div class="table-scroll">
-				<table id="daybooks">
-					<tr>
-						<th id="center_align">Date</th>
-						<th id="center_align">Narration</th>
-						<th id="center_align">Debit</th>
-						<th id="center_align">Credit</th>
-					</tr>
+			<div class=scrol_daybook>
+				<table class="table table-striped table-bordered">
+					<thead class="thead-dark">
+						<tr>
+							<th id="center_align">Date</th>
+							<th id="center_align">Narration</th>
+							<th id="center_align">Debit</th>
+							<th id="center_align">Credit</th>
+						</tr>
+					</thead>
+					<tbody>
 						<th:block th:each="daybookview: ${daybookViewObj}">
 							<tr>
 								<td id="left_align">Date</td>
@@ -38,8 +40,8 @@
 							<tr>
 								<td id="left_align" style="color: red"
 									th:text="${daybookview.date}">Date</td>
-								<td id="left_align" style="color: red" th:text="${daybookview.dayOfWeek}">Day
-									of week</td>
+								<td id="left_align" style="color: red"
+									th:text="${daybookview.dayOfWeek}">Day of week</td>
 								<td></td>
 								<td></td>
 							</tr>
@@ -58,6 +60,7 @@
 									th:text="${daybookview.creditTot}">Credit Total</td>
 							</tr>
 						</th:block>
+					</tbody>
 				</table>
 			</div>
 		</div>
