added new lines

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -35,8 +35,10 @@ a {
 
 table {
 	float: left;
-	width: 100%;
+	width: 90%;
+	padding: 10px;
 	border: 3px solid red;
+	position: relative;
 }
 
 .table-scroll {
