--- a/src/main/resources/templates/findTradingPL.html
+++ b/src/main/resources/templates/findTradingPL.html
@@ -23,7 +23,7 @@
 				<div class="col-xs-5 col-sm-6 col-lg-4">
 					<fieldset>
 						<legend style="width: auto;">Select Specifications</legend>
-						<form th:action="@{/trial}" th:object="${trialform}" method="post"
+						<form th:action="@{/tradingPL}" th:object="${tradingPLForm}" method="post"
 							style="max-width: 600px; margin: 0 auto;">
 							<div class="form-group">
 								<label for="exampleFormControlSelect1">Report Order</label> <select
@@ -33,7 +33,7 @@
 									<option value="true">Group</option>
 								</select>
 							</div>
-							Trial Balance as on : <input
+							Trading P&L  as on : <input
 								type="date" th:filed="*{endDate}" name="endDate"
 								min="2000-01-02" max="2022-01-01" value="2021-03-31">
 							<div class="form-group">
