zero balance option button change

--- a/src/main/resources/templates/findBalanceSheet.html
+++ b/src/main/resources/templates/findBalanceSheet.html
@@ -39,8 +39,8 @@
 							<div class="form-group">
 								<label for="exampleFormControlSelect2">Accounts with Zero Balance</label> <select class="form-control"
 									th:field="*{zeroBal}" id="exampleFormControlSelect2">
-									<option value="false">No</option>
-									<option value="true" selected>Yes</option>
+									<option value="true">No</option>
+									<option value="false" selected>Yes</option>
 								</select>
 							</div>
 							<div class="form-group">
