--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,11 +8,10 @@
 	<h1>Welcome to CrDr</h1>
 	</div>
 	<div class="flex-container">
-  <div class="zoom"><a th:href="@{/findDaybook}">Daybook</a></div>
-  <div class="zoom"><a th:href="@{/findLedger}">Ledger</a></div>
-  <div class="zoom"><a th:href="@{/findTrialBal}">Trial Balance</a></div>
-  <div class="zoom"><a th:href="@{/findTradingPL}">Trading - Profit and Loss</a></div>
-  <div class="zoom"><a th:href="@{/findBalSheet}">Balance Sheet</a></div>
+  <div class="zoom"><a th:href="@{/findDaybook}">Profile</a></div>
+  <div class="zoom"><a th:href="@{/reports}">Reports</a></div>
+  <div class="zoom"><a th:href="@{/upload}">CSV Upload</a></div>
+  <div class="zoom"><a th:href="@{/findTradingPL}">Excel Upload</a></div>
 	</div>
 </body>
 </html>
